# stock-data-ingestor

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
ingestor/: Dockerfile  pyproject.toml
ingestor/gitops/keyvaults/: manifest.yml
ingestor/gitops/scaling/: api.yml
ingestor/gitops/serviceaccounts/: manifest.yml
ingestor/src/stock/data/ingestor/: controller.py  main.py  worker.py
ingestor/tests/: test_main.py
src/stock/data/ingestor/: controller.py  main.py  worker.py
tests/: test_main.py
